Fix copy stream id button alignment on InfoView

--- a/app/src/userpages/components/StreamPage/Show/InfoView/infoView.pcss
+++ b/app/src/userpages/components/StreamPage/Show/InfoView/infoView.pcss
@@ -8,7 +8,7 @@
 
 .copyStreamIdButton {
   width: 128px;
-  height: 2rem;
+  margin-bottom: 1.5rem;
   display: flex;
   align-self: center;
 }
